# middleware-player-interface

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DemuxDataTypes.h  GstHandlerControl.cpp  GstUtils.cpp  GstUtils.h  InterfacePlayerPriv.h  InterfacePlayerRDK.cpp  InterfacePlayerRDK.h  MWConfig.cpp  MWConfig.h  MediaSample.h  PerfProfiler.cpp  PerfProfiler.h  PlayerScheduler.cpp  PlayerScheduler.h  PlayerSocInterfaceImpl.cpp  PlayerTelemetry.cpp  PlayerTelemetry.h  PlayerTelemetry2.cpp  PlayerTelemetry2.hpp  PlayerUtils.cpp  PlayerUtils.h  PlayerVersion.h  SocInterfaceImpl.cpp  SocUtils.cpp  SocUtils.h  TelemetryMarkers.h  aamp_sync_cid.txt  install-middleware.sh  libplayersocinterfaceimpl.pc
playerTelemetry/: CMakeLists.txt  PlayerTelemetry2.cpp  PlayerTelemetry2.hpp
test/mediaEngineAdapter/: .README.md.swp  CMakeLists.txt  README.md  api_generator.py  api_interface.h  business_logic.cpp  business_logic_old.cpp  fragment_buffer.cpp  fragment_buffer.h  hls_parser.cpp  hls_parser.h  http_client.cpp  http_client.h
test/pi-cli/: CMakeLists.txt  commandProcessing.cpp  commandProcessing.h  main.cpp
test/utests/: CMakeLists.txt  ReadMe.md  run.sh
test/utests/drm/mocks/: Fakeopencdm.cpp  MockOpenCdm.h
test/utests/fakes/: CMakeLists.txt  FakeBase64.cpp  FakeContentProtectionFireBolt.cpp  FakeContentSecurityManager.cpp  FakeContentSecurityManagerSession.cpp  FakeCrypto.cpp  FakeDRMSessionManager.cpp  FakeDrmSessionFactory.cpp  FakeGLib.cpp  FakeGStreamer.cpp  FakeGstHandlerControl.cpp  FakeGstUtils.cpp  FakePacketSender.cpp  FakePlayerExternalsRdkInterface.cpp  FakePlayerJsonObject.cpp  FakeSocInterface.cpp  FakeSocUtils.cpp  FakeSubtecConnecter.cpp  Fakeopencdm.cpp  Fakeopencdmsessionadapter.cpp
test/utests/mocks/: MockDrmHelper.h  MockDrmSession.h  MockDrmSessionFactory.h  MockDrmSessionManager.h  MockGLib.h  MockGStreamer.h  MockGstUtils.h  MockOpenCdm.h  MockOpenCdmSessionAdapter.h  MockPacketSender.h  MockPlayerConfig.h  MockSocInterface.h
test/utests/tests/: CMakeLists.txt  test_l1_TtmlSubtecParser.cpp  test_l1_WebVttSubtecParser.cpp  test_l1_WebvttSubtecDevInterface.cpp
test/utests/tests/Base64PLAYER/: Base64Tests.cpp  CMakeLists.txt
test/utests/tests/ClosedCaptionsTests/: CMakeLists.txt  ClosedCaptionsPacketTests.cpp  PlayerCCManagerFunctions.cpp  PlayerCCManagerTests.cpp  PlayerCCTrackInfoTests.cpp  SubtecConnectorTests.cpp
test/utests/tests/ContentsecuritymanagerTests/: CMakeLists.txt  ContentSecurityManagerSessionTests.cpp  ContentSecurityManagerTests.cpp  PlayerContentSecurityManagerFun.cpp  PlayerContentSecurityManagerSes.cpp  PlayerMemoryUtilsFun.cpp  PlayerMemoryUtilsTests.cpp  PlayerSecInterfaceFun.cpp  PlayerSecInterfaceTests.cpp
test/utests/tests/DrmAes/: CMakeLists.txt  DrmTestsAes.cpp
test/utests/tests/DrmHelperTests/: CMakeLists.txt  ClearKeyHelperTests.cpp  PlayReadyHelperTests.cpp  VanillaDrmHelperTests.cpp  VerimatrixHelperTests.cpp  WidevineDrmHelperTests.cpp
test/utests/tests/DrmOcdm/: CMakeLists.txt  ClearKeyDrmSessionTests.cpp  DrmDataTests.cpp  DrmSessionManagerTests.cpp
test/utests/tests/DrmOcdmTests/: CMakeLists.txt  OcdmBasicSessionAdapterTests.cpp  OcdmGstSessionAdapterTests.cpp  opencdmsessionadapterTests.cpp
test/utests/tests/DrmSecureClient/: CMakeLists.txt
test/utests/tests/DrmSessionManagerTests/: CMakeLists.txt  DrmSessionManagerTestCases.cpp
test/utests/tests/DrmTests/: CMakeLists.txt  ClearKeyDrmSessionTests.cpp  DrmHLSTests.cpp  DrmHelperTests.cpp  DrmInfo.cpp  DrmJsonObjectTests.cpp  DrmSessionFactoryTests.cpp  DrmSessionManagerTests.cpp  DrmUtilsTests.cpp  HlsDrmSessionInterfaceTests.cpp  HlsOcdmBridgeInterfaceTests.cpp  PlayerHlsDrmSessionInterfaceBaseTests.cpp  PlayerHlsDrmSessionInterfaceTests.cpp  PlayerHlsOcdmTests.cpp
test/utests/tests/DrmUrlTests/: CMakeLists.txt
test/utests/tests/FireBoltTests/: CMakeLists.txt  FireBoltFun.cpp
test/utests/tests/GstHandlerControlTests/: CMakeLists.txt  GstHandlerControlTests.cpp
test/utests/tests/GstPlayer/: CMakeLists.txt  FunctionalTests.cpp  PauseOnPlaybackTests.cpp
test/utests/tests/GstPlugingSubtecTests/: CMakeLists.txt  GstsubtecbinFun.cpp  Gstsubtecmp4transformFun.cpp  GstsubtecsinkFun.cpp  GstvipertransformFun.cpp
test/utests/tests/GstPluginsTests/: CMakeLists.txt  GstcdmidecryptorFun.cpp  GstclearkeydecryptorFun.cpp  GstplayreadydecryptorFun.cpp  GstverimatrixdecryptorFun.cpp  GstwidevinedecryptorFun.cpp
test/utests/tests/GstUtilsTests/: CMakeLists.txt  GstUtilsTests.cpp
test/utests/tests/InterfacePlayerTests/: CMakeLists.txt  InterfacePlayerFunctionTests.cpp
test/utests/tests/OCDMSessionAdapter/: CMakeLists.txt  FunctionalTests.cpp  KeyUpdateTests.cpp
test/utests/tests/OcdmBasicSessionAdapterTests/: CMakeLists.txt  FunctionalTests.cpp
test/utests/tests/PlayerCommonTests/: CMakeLists.txt  PlayerInterfaceRDKprivFun.cpp  PlayerMetaDataFun.cpp  PlayerSchedulerFun.cpp  PlayerUtilsFun.cpp  ProcessHandlerFun.cpp  SocUtilsFun.cpp  gstPlayerTaskPoolFun.cpp
test/utests/tests/PlayerExternalsRdkTests/: CMakeLists.txt  PlayerExternalsRdkInterfaceTestCases.cpp
test/utests/tests/PlayerExternalsTests/: CMakeLists.txt  PlayerExternalUtilsFun.cpp  PlayerExternalsInterfaceBaseFun.cpp  PlayerExternalsInterfaceFun.cpp  PlayerMacros.h  PlayerRFCFun.cpp  PlayerThunderInterfaceFun.cpp
test/utests/tests/PlayerIsoBmffTests/: CMakeLists.txt  PlayerIsoBmffBoxFunctios.cpp  PlayerIsoBmffBoxTests.cpp  PlayerIsoBmffBufferFunctions.cpp  PlayerIsoBmffBufferTests.cpp  PlayerIsoBmffTestRunner.cpp
test/utests/tests/PlayerJsonObjectTests/: CMakeLists.txt  PlayerJsonObjectFun.cpp
test/utests/tests/PlayerLogManagerTests/: CMakeLists.txt  PlayerLogManagerFun.cpp
test/utests/tests/PlayerTelemetryTests/: CMakeLists.txt  TelemetryTests.cpp
test/utests/tests/PlayerUtilsTests/: CMakeLists.txt  PlayerUtilsTestCases.cpp
test/utests/tests/PluginsTests/: CMakeLists.txt
test/utests/tests/SubtecTests/: CMakeLists.txt  ClosedCaptionsPacketTests.cpp  PacketSenderTests.cpp  PlayerSubtecCCManagerTests.cpp  SubtecPacketTests.cpp  TtmlPacketTests.cpp  WebVttPacketTests.cpp
(+181 files in other folders)
