# If not stated otherwise in this file or this component's license file the
# following copyright and licenses apply:
#
# Copyright 2022 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.10.3)

project(UnitTests)

# Don't include CTestDashboardTargets in GUI projects
set_property(GLOBAL PROPERTY CTEST_TARGETS_ADDED 1)
include(CTest)

set(PLAYER_ROOT "../../")

find_package(PkgConfig REQUIRED)

pkg_check_modules(GTEST REQUIRED gtest)
pkg_check_modules(GMOCK REQUIRED gmock)
pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
pkg_check_modules(GSTREAMERBASE REQUIRED gstreamer-base-1.0)
pkg_check_modules(GSTREAMERAPP REQUIRED gstreamer-app-1.0)
pkg_check_modules(GLIB REQUIRED glib-2.0)
pkg_check_modules(LibXml2 REQUIRED libxml-2.0)
pkg_check_modules(LIBCJSON REQUIRED libcjson)

if (NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
  pkg_search_module(JSCORE REQUIRED javascriptcoregtk-4.1 javascriptcoregtk-4.0)
  find_path (JSC_INCDIR JavaScriptCore/JavaScript.h HINTS ${JSCORE_INCLUDE_DIRS} REQUIRED)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_GST1 -ggdb")
if(NOT CMAKE_SYSTEM_NAME MATCHES "Linux")
  add_compile_options(-fsanitize=address)
  add_link_options(-fsanitize=address)
endif()
STRING(REPLACE " -Werror=effc++" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS}) #disabling effc++ compiler warnings for utest directory
#if (CMAKE_PLATFORM_UBUNTU )
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wsuggest-override")
#endif()

add_definitions(-DENABLE_LOGGING)

add_subdirectory(fakes)
if (CMAKE_XCODE_BUILD_SYSTEM)
  # ARM64 will fail to build utest schemes in XCode unless this is set
  set(CMAKE_GTEST_DISCOVER_TESTS_DISCOVERY_MODE PRE_TEST)
endif()

enable_testing()

# Add the player/test/common directory to the module include path for access to
# common CMake test functionality, like the CodeCoverage.cmake module.
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../common")

if (CMAKE_PLATFORM_UBUNTU)
        link_directories(${GTEST_LIBRARY_DIRS} ${GMOCK_LIBRARY_DIRS})
endif()

function(player_utest_run_add test_suite)
	if (CMAKE_RDKE_TEST_RUN)
		# Add the entire googletest test suite to ctest. This means that ctest runs each test
		# suite executable only once, so the test_details.json googletest JSON output file
		# required by RDK-E does not get overwritten.
		add_test(NAME ${test_suite} COMMAND ${test_suite})
	else()
		# Discover tests by running the googletest test suite executable with "--gtest_list_tests",
		# and add each test individually to ctest. This results in ctest running each test suite
		# executable separately for each test, giving greater opportunity for parallelism and
		# stdout per-test rather than per-suite, amongst other advantages. There is no issue with
		# overwriting of googletest JSON output files, because ctest itself handles the output to
		# file via its "--output-junit" argument, which creates a JUnit XML output file instead.
		gtest_discover_tests(${test_suite} DISCOVERY_TIMEOUT 10 TEST_PREFIX ${test_suite}:)
	endif()
endfunction()

function(player_utest_add_cov TARGET)
  # gcov doesn't work that well with Apple build tools, but the alternatives are not attractive:
  #  * use llvm (doesn't work with Apple clang)
  #  * use xcodebuild (there is no HTML report and very different tool chain)

  target_compile_options(${TARGET} PRIVATE --coverage)
  target_link_options(${TARGET} PRIVATE --coverage)

endfunction()


# ---- Make find_package(OpenSSL) use a Homebrew keg, not /lib & /include ----
# Honor *Root variables* for find_package (e.g., OpenSSL_ROOT):
if (POLICY CMP0074)
  cmake_policy(SET CMP0074 NEW)
endif()

# If the user hasn't provided a root, pick one Homebrew keg.
if (APPLE AND NOT OPENSSL_ROOT_DIR AND NOT DEFINED ENV{OPENSSL_ROOT_DIR})
  foreach(_ossl_ver "3.5" "3.4" "3")
    if (EXISTS "/opt/homebrew/opt/openssl@${_ossl_ver}")
      set(OPENSSL_ROOT_DIR "/opt/homebrew/opt/openssl@${_ossl_ver}" CACHE PATH "" FORCE)
      break()
    elseif (EXISTS "/usr/local/opt/openssl@${_ossl_ver}")
      set(OPENSSL_ROOT_DIR "/usr/local/opt/openssl@${_ossl_ver}" CACHE PATH "" FORCE)
      break()
    endif()
  endforeach()
endif()

# Help CMake search that prefix first
if (OPENSSL_ROOT_DIR)
  list(PREPEND CMAKE_PREFIX_PATH "${OPENSSL_ROOT_DIR}")
  # Also set OpenSSL_ROOT (recognized due to CMP0074 NEW)
  set(OpenSSL_ROOT "${OPENSSL_ROOT_DIR}" CACHE PATH "" FORCE)
endif()

# Ask for components so CMake tries to form imported targets
find_package(OpenSSL REQUIRED COMPONENTS Crypto SSL)

# --- Fallback: if imported targets are still missing, create them explicitly ---
if (NOT TARGET OpenSSL::Crypto OR NOT TARGET OpenSSL::SSL)
  message(WARNING "FindOpenSSL did not define imported targets; creating fallback targets.")
  if (NOT OPENSSL_INCLUDE_DIR OR NOT OPENSSL_CRYPTO_LIBRARY OR NOT OPENSSL_SSL_LIBRARY)
    message(FATAL_ERROR
      "OpenSSL variables are incomplete.\n"
      "OPENSSL_ROOT_DIR='${OPENSSL_ROOT_DIR}'\n"
      "OPENSSL_INCLUDE_DIR='${OPENSSL_INCLUDE_DIR}'\n"
      "OPENSSL_CRYPTO_LIBRARY='${OPENSSL_CRYPTO_LIBRARY}'\n"
      "OPENSSL_SSL_LIBRARY='${OPENSSL_SSL_LIBRARY}'\n"
      "Tip: configure with -DOPENSSL_ROOT_DIR=<brew keg> and explicit *_LIBRARY paths."
    )
	endif()
	# Create OpenSSL::Crypto imported target if it does not already exist
	if(NOT TARGET OpenSSL::Crypto)
	add_library(OpenSSL::Crypto UNKNOWN IMPORTED)
	set_target_properties(OpenSSL::Crypto PROPERTIES
		IMPORTED_LOCATION "${OPENSSL_CRYPTO_LIBRARY}"
		INTERFACE_INCLUDE_DIRECTORIES "${OPENSSL_INCLUDE_DIR}"
	)
	endif()

  add_library(OpenSSL::SSL UNKNOWN IMPORTED)
  set_target_properties(OpenSSL::SSL PROPERTIES
    IMPORTED_LOCATION "${OPENSSL_SSL_LIBRARY}"
    INTERFACE_INCLUDE_DIRECTORIES "${OPENSSL_INCLUDE_DIR}"
  )
endif()

# Diagnostics (helpful while debugging)
message(STATUS "OpenSSL include: ${OPENSSL_INCLUDE_DIR}")
message(STATUS "OpenSSL crypto : ${OPENSSL_CRYPTO_LIBRARY}")
message(STATUS "OpenSSL ssl    : ${OPENSSL_SSL_LIBRARY}")

add_subdirectory(tests)
