# If not stated otherwise in this file or this component's license file the
# following copyright and licenses apply:
#
# Copyright 2018 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

include(GoogleTest)
add_subdirectory(GstUtilsTests)
add_subdirectory(GstPlayer)
add_subdirectory(GstHandlerControlTests)
add_subdirectory(TextStyleAttributes)
add_subdirectory(OcdmBasicSessionAdapterTests)
add_subdirectory(OCDMSessionAdapter)
add_subdirectory(DrmSecureClient)
add_subdirectory(DrmTests)
add_subdirectory(DrmUrlTests)
add_subdirectory(base16Tests)
add_subdirectory(Base64PLAYER)
add_subdirectory(TtmlSubtecParser)
add_subdirectory(PluginsTests)
add_subdirectory(DrmAes)
add_subdirectory(WebVttSubtecParserTests)
add_subdirectory(WebvttSubtecDevInterfaceTests)
add_subdirectory(ClosedCaptionsTests)
add_subdirectory(PlayerIsoBmffTests)
add_subdirectory(PlayerExternalsTests)
add_subdirectory(PlayerJsonObjectTests)
add_subdirectory(ContentsecuritymanagerTests)
add_subdirectory(SubtitleTests)
add_subdirectory(PlayerCommonTests)
add_subdirectory(PlayerLogManagerTests)
add_subdirectory(VendorTests)
add_subdirectory(GstPluginsTests)
add_subdirectory(GstPlugingSubtecTests)
add_subdirectory(FireBoltTests)
add_subdirectory(DrmOcdmTests)
add_subdirectory(DrmHelperTests)
add_subdirectory(DrmSessionManagerTests)
add_subdirectory(PlayerUtilsTests)
